<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_img"
        android:id="@+id/login_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_pwd"
        android:text="@string/forgot_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/email_pno"
        android:hint="@string/phone_number_or_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_pwd"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/pwd"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_pno"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/rounded_edittext"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/login_btn"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/pwd"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:id="@+id/or"
        android:text="@string/or"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/signIn_google"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/sign_in_with_google"
        android:drawableLeft="@drawable/google_icon"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="#F5F7FA"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:id="@+id/login_txt_view2"
        app:layout_constraintTop_toBottomOf="@id/signIn_google"
        android:text="@string/by_continuing_you_agree_to_the_amazon_s"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/login_txt_view3"
        app:layout_constraintTop_toBottomOf="@id/login_txt_view2"
        app:layout_constraintBottom_toBottomOf="@id/login_txt_view2"
        android:text="@string/terms_and_conditions"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/login_txt_view4"
        android:text="@string/new_here_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>