<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/create_your_account"
        android:textSize="24sp"
        android:fontFamily="@font/mulish"
        android:textStyle="bold"
        android:textColor="#08080B"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/full_name"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/txt_view1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@id/full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/password"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/confirm_password"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/btn"
        android:text="@string/sigh_up"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:id="@+id/txt_view2"
        app:layout_constraintTop_toBottomOf="@id/btn"
        android:text="@string/by_continuing_you_agree_to_the_amazon_s"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:id="@+id/txt_view3"
        app:layout_constraintTop_toBottomOf="@id/txt_view2"
        app:layout_constraintBottom_toBottomOf="@id/txt_view2"
        android:text="@string/terms_and_conditions"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/txt_view4"
        android:text="@string/already_have_an_account_log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>